--- a/scraper/package.json
+++ b/scraper/package.json
@@ -5,12 +5,15 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
+    "server": "node server.js",
     "points": "node main.js points",
     "matches": "node main.js matches",
     "teams": "node main.js teams",
     "legacy": "node scraper.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "puppeteer": "^24.0.0"
   }
 }
