Fix Puppeteer Chrome configuration for Render deployment
- Update browser.js with production-compatible Chrome args
- Add Chrome installation script to package.json
- Support for Render cloud environment
- Enable single-process mode for cloud hosting

--- a/scraper/package.json
+++ b/scraper/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "node server.js",
+    "build": "npx puppeteer browsers install chrome",
     "dev": "node main.js",
     "points": "node main.js points",
     "matches": "node main.js matches",
@@ -16,5 +17,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "puppeteer": "^24.0.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
