Add Chrome installation scripts and Render config
- Add postinstall script for Chrome installation
- Add render.yaml for better deployment config
- Add install-chrome.sh script
- Attempt to fix Puppeteer Chrome issues on Render

--- a/scraper/package.json
+++ b/scraper/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "server": "node server.js",
     "build": "npx puppeteer browsers install chrome",
+    "postinstall": "npx puppeteer browsers install chrome",
     "dev": "node main.js",
     "points": "node main.js points",
     "matches": "node main.js matches",
