--- a/scraper/package.json
+++ b/scraper/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "main.js",
   "scripts": {
-    "start": "npx puppeteer browsers install chrome && node server.js",
+    "start": "node server.js",
     "server": "node server.js",
     "build": "npx puppeteer browsers install chrome",
     "postinstall": "npx puppeteer browsers install chrome",
