--- a/scraper/package.json
+++ b/scraper/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "puppeteer": "^24.0.0"
+    "puppeteer": "^24.0.0",
+    "@sparticuz/chromium": "^123.0.0"
   },
   "engines": {
     "node": ">=18"
