--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^123.0.0",
     "next": "15.5.2",
-    "playwright": "^1.55.0",
-    "playwright-aws-lambda": "^0.10.0",
+    "puppeteer-core": "^22.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
