--- a/web-app/package.json
+++ b/web-app/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@sparticuz/chromium": "^123.0.0",
     "next": "15.5.2",
