feat: Refactor project for improved architecture and maintainability
This commit introduces a significant refactoring of the IPL Data Monorepo,
focusing on clearer separation of concerns, reduced code duplication, and
improved maintainability.

Key changes include:

- **Architectural Shift:**
  - The `scraper/` project is now the authoritative source for scraping and
    serving IPL data via its `server.js`.
  - `web-app/` API routes now fetch data from the `scraper/server.js`
    endpoint, acting as a proxy.

- **Redundancy Removal:**
  - Removed the `scraper-vercel/` directory.
  - Eliminated redundant scraper files from `web-app/lib/scrapers/`.
  - Removed `web-app/lib/utils/browser.js` and `web-app/lib/utils/browser-playwright.js`.
  - Removed empty directories `web-app/lib/scrapers/` and `web-app/lib/utils/`.
  - Removed `scraper/scraper.js` and `scraper/install-chrome.sh`.

- **Dependency Management & Configuration:**
  - Refactored `scraper/package.json` to use `puppeteer-core` instead of `puppeteer`.
  - Updated `README.md` to accurately reflect the new project structure.

This refactoring addresses previous issues related to Chromium in Vercel
environments and sets up a more robust and scalable data flow.

--- a/scraper/package.json
+++ b/scraper/package.json
@@ -6,18 +6,15 @@
   "scripts": {
     "start": "node server.js",
     "server": "node server.js",
-    "build": "npx puppeteer browsers install chrome",
-    "postinstall": "npx puppeteer browsers install chrome",
     "dev": "node main.js",
     "points": "node main.js points",
     "matches": "node main.js matches",
-    "teams": "node main.js teams",
-    "legacy": "node scraper.js"
+    "teams": "node main.js teams"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "puppeteer": "^24.0.0",
+    "puppeteer-core": "^22.10.0",
     "@sparticuz/chromium": "^123.0.0"
   },
   "engines": {
